# credit_card_customer_segmentation

./: .gitignore  README.md  credit_card_customer_segmentation.ipynb  customer_segmentation.csv  data_dictionary.md  dataset_documentation.ipynb  project_info.txt  pyproject.toml
