[tool.poetry]
name = "credit-card-customer-segmentation"
version = "0.1.0"
description = "Customer segmentation analysis using K-means clustering"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.24.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.4.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
